Fix the search input placeholder color on Firefox

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -30,6 +30,10 @@ figcaption {
   figcaption {
     color: #c8c5c9;
   }
+
+  .search-input {
+    color: #fff;
+  }
 }
 
 .note,
